--- a/practice-1/style.css
+++ b/practice-1/style.css
@@ -52,7 +52,7 @@ body {
 	display: flex;
 
 	padding: 100px 120px 150px;
-	height: calc(100vh - 64px);
+	height: calc(100vh - 64px - 100px - 150px);
 }
 
 .header-logo {
@@ -109,7 +109,7 @@ body {
 	background-size: 100% 100%;
 
 	width: 50px;
- height: 50px;
+ 	height: 50px;
 }
 
 .main-left-text-box {
@@ -162,17 +162,76 @@ body {
 }
 
 .input-container {
-	margin: 13px 0;
+	margin-top: 5px;
+	padding: 13px 0;
 
 	display: flex;
 }
 
 .input {
 	flex: 1;
+	background: none;
 	font-family: 'Pretendard-Regular';
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 19.6px;
 	border: none;
+	outline: none;
 }
 
+.show-icon {
+	margin-right: 16px;
+	background-image: url(./asset/eye_light.png);
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	background-size: 100% 100%;
+	width: 24px;
+	height: 24px;
+}
+
+.show-icon:hover {
+	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0.05);
+	border-radius: 25%;
+}
+
+.main-right-card-bottom {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	align-items: center;
+}
+
+.sign-in-button {
+	height: 48px;
+	width: 100%;
+
+	background-color: #000000;
+	color: #ffffff;
+
+	border: none;
+	border-radius: 46px;
+
+	font-family: 'Pretendard-Regular';
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 19.6px;
+}
+
+.sign-up-description {
+	margin-top: 20px;
+	color: rgba(0, 0, 0, 0.7);
+
+	font-family: 'Pretendard-Regular';
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 19.6px;
+
+	text-align: center;
+}
+
+.emhasis {
+	color: #000000;
+	font-weight: 500;
+	text-decoration: none;
+}
